<resources>
    <string name="app_name">Расписание</string>
    <string name="action_about">О приложении</string>
    <string name="action_exit">Выход</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="stationFromText">Станция отправления:</string>
    <string name="stationFromButtonText">Выбрать станцию отправления</string>stationFromButtonText
    <string name="stationToText">Станция прибытия:</string>
    <string name="stationToButtonText">Выбрать станцию прибытия</string>
    <string name="dateText">Дата отправления:</string>
    <string name="dateButtonText">Выбрать дату отправления</string>
    <string name="dateChangeText">Укажите дату отправления</string>
    <string name="changeDateButtonText">Сохранить дату отправления</string>
    <string name="searchHint">Поиск станции...</string>
    <string name="loadHint">Загрузка станций...</string>
    <string name="stationCardTitle">Информация о станции</string>

    <string name="cityTitle">Город</string>
    <string name="regionTitle">Регион</string>
    <string name="countryTitle">Страна</string>
    <string name="changeStationButtonText">Выбрать станцию</string>
    <string name="textCity">город</string>
    <string name="textAboutTitle">О приложении</string>
    <string name="textAbout1">- Копирайт GNU General Public License v 3.0</string>
    <string name="textAbout2">- Версия приложения 0.1</string>
    <string name="textAbout3">Пожалуйста, сообщайте об ошибках и пожеланиях</string>

    <!--<string name=""></string>-->
</resources>
