<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_home"
                android:elevation="8dp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_toolbar">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:fadingEdge="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="8dp"
                android:elevation="8dp"
                app:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0dp"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:background="#fff">

                <TextView
                    android:id="@+id/stationCardTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/stationCardTitle"
                    android:textColor="@color/body_text_1"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/stationTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="International Busterminal, Edbergstarsse 200 A"
                    android:textColor="@color/body_text_1"
                    android:textSize="22sp" />



                <TextView
                    android:id="@+id/cityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="1dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cityTitle" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/text_size_xlarge" />

                <TextView
                    android:id="@+id/borderline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_text"
                    android:paddingTop="4dp"
                    android:textSize="1sp" />

                <TextView
                    android:id="@+id/regionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="1dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/regionTitle" />

                <TextView
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/text_size_xlarge" />

                <TextView
                    android:id="@+id/borderline1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_text"
                    android:paddingTop="4dp"
                    android:textSize="1sp" />

                <TextView
                    android:id="@+id/countryTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="1dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/countryTitle" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/text_size_xlarge" />

                    <Button
                        android:id="@+id/btnSelectStation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/abc_action_bar_overflow_padding_end_material"
                        android:background="@color/button_material_dark"
                        android:text="@string/changeStationButtonText"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_medium" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</FrameLayout></RelativeLayout>